<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity$PlaceholderFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:scaleType="centerCrop"
            android:src="@drawable/wallpaper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
<!--
        <LinearLayout
            android:background="#44000000"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
-->
    </RelativeLayout>

    <LinearLayout
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            style="@style/welcome_to"
            android:gravity="center"
            android:text="@string/welcome_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/welcome_to_value"
            android:gravity="center"
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/instructions"
            style="@style/welcome_info"
            android:gravity="center"
            android:text="@string/welcome_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</RelativeLayout>
