<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/arguments_container"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/arguments_title"
            style="@style/input_box_title"
            android:text="#Arguments title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/arguments_value"
            style="@style/input_box"
            android:inputType="textNoSuggestions"
            android:hint="#Hint Arguments"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center_vertical"
                style="@style/input_box_title"
                android:id="@+id/input_title"
                android:text="@string/chose_file_title"
                android:layout_width="wrap_content"
                android:layout_height="33dp"/>

            <Button
                style="@style/button"
                android:layout_below="@id/input_title"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/chose"
                android:text="@string/chose_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>

            <EditText
                android:layout_below="@id/input_title"
                android:layout_toLeftOf="@id/chose"
                android:layout_toStartOf="@id/chose"
                android:id="@+id/input"
                style="@style/input_box"
                android:inputType="textNoSuggestions"
                android:hint="@string/chose_file_hint"
                android:singleLine="true"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <LinearLayout
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:gravity="center_vertical"
                    style="@style/input_box_title"
                    android:id="@+id/output_title"
                    android:text="@string/convert_result_title"
                    android:layout_alignParentTop="true"
                    android:layout_width="wrap_content"
                    android:layout_height="33dp"/>

                <ImageButton
                    style="@style/share_button"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:id="@+id/share"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <CheckBox
                    android:layout_toLeftOf="@id/share"
                    android:id="@+id/output_option"
                    style="@style/input_box_title"
                    android:text="#Option output"
                    android:layout_alignParentTop="true"
                    android:layout_width="wrap_content"
                    android:layout_height="33dp"
                    android:checked="true"/>

            </RelativeLayout>

            <EditText
                android:id="@+id/output"
                style="@style/input_box"
                android:inputType="textMultiLine|textNoSuggestions"
                android:hint="#Hint Output"
                android:selectAllOnFocus="true"
                android:singleLine="false"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>